tests/baselines/reference/moduleVisibilityTest1(strict=true).errors.txt
moduleVisibilityTest1.ts(24,21): error TS7005: Variable 'exported_var' implicitly has an 'any' type.
moduleVisibilityTest1.ts(58,20): error TS2352: Conversion of type 'null' to type 'I' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.


==== moduleVisibilityTest1.ts (2 errors) ====
    module OuterMod {
    	export function someExportedOuterFunc() { return -1; }
    
    	export module OuterInnerMod {
    		export function someExportedOuterInnerFunc() { return "foo"; }
    	}
    }
    
    import OuterInnerAlias = OuterMod.OuterInnerMod;
    
    module M {
    
    	export module InnerMod {
    		export function someExportedInnerFunc() { return -2; }
    	}
    
    	export enum E {
    		A,
    		B,
    		C,
    	}
    
    	export var x = 5;
    	export declare var exported_var;
    	                   ~~~~~~~~~~~~
!!! error TS7005: Variable 'exported_var' implicitly has an 'any' type.
    
    	var y = x + x;
    
    
    	export interface I {
    		someMethod():number;
    	}
    
    	 class B {public b = 0;}
    
    	 export class C implements I {
    		public someMethodThatCallsAnOuterMethod() {return OuterInnerAlias.someExportedOuterInnerFunc();}
    		public someMethodThatCallsAnInnerMethod() {return InnerMod.someExportedInnerFunc();}
    		public someMethodThatCallsAnOuterInnerMethod() {return OuterMod.someExportedOuterFunc();}
    		public someMethod() { return 0; }
    		public someProp = 1;
    
    		constructor() {
    		    function someInnerFunc() { return 2; }
                var someInnerVar = 3;
    		}
    	}
    
    	var someModuleVar = 4;
    
    	function someModuleFunction() { return 5;}
    }
    
    module M {
    	export var c = x;
    	export var meb = M.E.B;
    }
    
    var cprime : M.I = <M.I>null;
                       ~~~~~~~~~
!!! error TS2352: Conversion of type 'null' to type 'I' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
    
    var c = new M.C();
    var z = M.x;
    var alpha = M.E.A;
    var omega = M.exported_var;
    c.someMethodThatCallsAnOuterMethod();
    